@@ -1,3 +1,7 @@
+2002-01-09  Anders Carlsson  <andersca@gnu.org>
+
+	* gnome-settings-daemon.c (main): Call gconf_client_add_dir.
+
 Tue Jan  8 15:50:59 2002  Jonathan Blandford  <jrb@redhat.com>
 
 	* Makefile.am: Add locate-pointer.
